@@ -1,8 +1,6 @@
-# $Id: DISABLED,v 1.24 2008-08-03 22:20:58 bagder Exp $
+# $Id: DISABLED,v 1.25 2008-08-04 22:00:22 bagder Exp $
 # This file can be used to specify test cases that should not run when all
 # test cases are run by runtests.pl. Just add the plain test case numbers, one
 # per line.
 # Lines starting with '#' letters are treated as comments.
-1051
-1052
-1055
+
