@@ -29,12 +29,12 @@ Content-Length: 51
 If this is received, the location following worked
 </data2>
 <datacheck>
-HTTP/1.1 301 Redirect
+HTTP/1.1 301 Redirect swsclose
 Date: Thu, 29 Jul 2008 14:49:00 GMT
 Server: test-server/fake
 Location: data/10510002.txt?coolsite=yes
 Content-Length: 0
-Connection: Keep-Alive
+Connection: close
 
 HTTP/1.1 100 Continue
 
@@ -76,6 +76,12 @@ the
 <strip>
 ^User-Agent:.*
 </strip>
+
+# The primary reason libcurl sends the data part twice in this test is that
+# the test HTTP server is blocking until it has read the entire request,
+# including the full request-body before it responds. So in this test the
+# server says 301 and 100 _after_ the entire PUT body has been sent.
+
 <protocol>
 PUT /want/1051 HTTP/1.1
 Host: %HOSTIP:%HTTPPORT
@@ -83,6 +89,15 @@ Accept: */*
 Content-Length: 78
 Expect: 100-continue
 
+Weird
+     file
+         to
+   upload
+for
+   testing
+the
+   PUT
+      feature
 PUT /want/data/10510002.txt?coolsite=yes HTTP/1.1
 Host: %HOSTIP:%HTTPPORT
 Accept: */*
