@@ -65,7 +65,18 @@ the
 PUT /1055 HTTP/1.1
 Host: %HOSTIP:%HTTPPORT
 Accept: */*
+Content-Length: 78
+Expect: 100-continue
 
+Weird
+     file
+         to
+   upload
+for
+   testing
+the
+   PUT
+      feature
 USER anonymous
 PASS ftp@example.com
 PWD
